# Grimoire

./: README.md  config.py
beacon/: CMakeLists.txt  GrimoireAgent.cpp  GrimoireAgent.hpp  GrimoireComms.cpp  GrimoireComms.hpp  GrimoireConfig.cpp  GrimoireConfig.hpp  GrimoireCrypto.cpp  GrimoireCrypto.hpp  Utils.cpp  Utils.hpp  main.cpp
console/src/: App.vue  main.ts  style.css
console/src/components/: AIAssistant.vue  AppLayout.vue  SidebarNav.vue
console/src/router/: index.ts
console/src/stores/: authStore.ts  beaconStore.ts  fileStore.ts  terminalStore.ts
console/src/utils/: http.ts
console/src/views/: FileExplorer.vue  LobbyView.vue  LoginView.vue  PayloadGeneratorView.vue  TerminalView.vue
model/: fineTurn.py  fineTurn_cha.py
model/微调语句/: merge_jsonl.py
server/: ai_routes.py  api_routes.py  app.py  auth_routes.py  operator_routes.py  scheduler.py
server/core/: ai_service.py  beacon_service.py  task_service.py
server/persistence/: database.py  models.py
shared/: CryptoManager.py
